--- a/app/views/users/sign_up.html.erb
+++ b/app/views/users/sign_up.html.erb
@@ -1,9 +1,22 @@
-<h1>會員</h1>
+<h1>會員註冊</h1>
 
-<form method="post" action="https://google.com">
-    <input type="text" name="username">
-    <input type="password" name="password">
-    <input type="password" name="password_confirm">
-
-    <input type="submit" value="登入">
-</form>
+<%= form_for(@user, url: '/account_verify') do |form| %>
+    <div class="fields">
+      <%= form.label :mail, '信箱' %>
+      <%= form.email_field :mail  %>
+    </div>
+  
+    <div class="fields">
+      <%= form.label :username, '姓名' %>
+      <%= form.text_field :username %>
+    </div>
+  
+    <div class="fields">
+      <%= form.label :password, '密碼' %>
+      <%= form.password_field :password %>
+    </div>
+  
+    <div class="actions">
+      <%= form.submit '註冊' %>
+    </div>
+  <% end %>
